# gitlab-skip-if-tree-ok-in-past

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  build-with-docker.sh  build.sh  diagram.plantuml  skip-if-tree-ok-in-past
.run/: go test github.com_jersou_gitlab-skip-if-tree-ok-in-past.run.xml
bash-api-version/: skip.sh
bash-cache-version/: README.md  skip.sh
deno-api-version/: skip.ts
go-api-version/: build.sh  skip-if-tree-ok-in-past  skipIfTreeOkInPast.go  skipIfTreeOkInPast_test.go
go-api-version/test/: untar.go
go-cache-version/: Dockerfile  build-with-docker.sh  build.sh  skip-if-tree-ok-in-past  skipIfTreeOkInPast.go  skipIfTreeOkInPast_test.go
go-version/: go.mod  skipIfTreeOkInPast.go
node-api-version/: skip.js
node-cache-version/: skip.js
node-version/: skip.js
rust-api-version/: .dockerignore  .gitignore  Cargo.toml  README.md  diagram.plantuml  skip-if-tree-ok-in-past
rust-api-version/sh/: build-with-docker.sh  build.sh  coverage.sh  integration-test.sh
rust-api-version/sh/build-with-docker/: Dockerfile  docker-compose.yml
rust-api-version/src/: artifact.rs  config.rs  find_last_job_ok.rs  git.rs  gitlab.rs  help.rs  jobs.rs  main.rs  process.rs  skip_ci_file.rs  skipci_log.rs  trace.rs
rust-api-version/test/: raw_done
rust-api-version/test/integration/: docker-compose.yml  nginx.conf
rust-api-version/test/integration/api/projects/123/: jobs?scope=success&per_page=100&page=1&private_token=___API_READ_TOKEN___
sh/: build-with-docker.sh  build.sh  run.sh  test.sh
src/: artifact.rs  find_last_job_ok.rs  git.rs  gitlab.rs  jobs.rs  main.rs  process.rs  skip_ci_file.rs
test/: gen-test-repo.sh
test/integration/: nginx.conf
test/integration/api/projects/123/jobs/12345679/: raw
test/integration/scratch-image/: Dockerfile
