[package]
name = "gitlab-skip-if-tree-ok-in-past-rust-api-version"
version = "0.1.3"
edition = "2021"

[profile.release]
# to generate small binary : https://github.com/johnthagen/min-sized-rust
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
zip = { version = "0.6.4", default-features = false, features = ["deflate"] }
git2 = { version = "0.16.1", default-features = false }
tokio = { version = "1.27.0", features = ["fs", "macros"] }
hyper = { version = "0.14.25" }
hyper-rustls = { version = "0.24.0", default-features = false, features = ["tokio-runtime", "http1", "tls12", "webpki-roots"] }
tempfile = "3.5.0"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = { version = "1.0.95", features = ["default"] }
anyhow = "1.0.70"
log = "0.4.17"
env_logger = "0.10.0"

[dev-dependencies]
gag = "1.0.0"
temp-env = "0.3.3"
httptest = "0.15.4"
